# github-fine-grained-token-provider

./: .gitignore  Makefile  README.md  manifest.json  requirements.txt
.github/workflows/: release.yml
project_terraform/: README.md  example-env  githubtok.tf
python-package/: README.md  github_fine_grained_token_provider.py  provider.py  pyproject.toml
terraform-plugin/: terraform-provider-github-fine-grained-token_v0.1.0
terraform-project-using-provider/: INSTRUCTIONS.md  main.tf
